--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,9 +36,6 @@
         {% if page.modified %}<span class="entry-date date modified"><time datetime="{{ page.modified }}"><i class="fa fa-pencil"></i> {{ page.modified | date: "%B %d, %Y" }}</time></span>{% endif %}
         {% if site.owner.disqus-shortname and page.comments or site.comments %}<span class="entry-comments"><i class="fa fa-comment-o"></i> <a href="#disqus_thread">Comment</a></span>{% endif %}
         {% include social-share.html %}
-    <br /> <div class="entry-tags" text-decoration="none">
-          {% for tag in page.tags %}<li><a href="{{ site.url }}/tags/#{{ tag }}" title="Pages tagged {{ tag }}">{{ tag }}</a></li>{% endfor %}
-        </div>
         {% if page.ads == true %}{% include ad-sidebar.html %}<!-- /.google-ads -->{% endif %}
       </footer> 
       <div class="entry-content">
@@ -52,7 +49,10 @@
         {% include fb-like.html %}
         <p><strong> Tetszett a cikk? Itt lájkolhatod az oldalamat, hogy a következőről se maradj le!</strong></p>
   <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fagostonlaszloartist&tabs&width=340&height=130&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=false&appId=1705794036358179" width="340" height="130" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-
+<p><strong> Hasonló cikkeket olvashatsz az alábbi témákra kattintva!</strong></p>
+        <div class="entry-tags" text-decoration="none">
+          {% for tag in page.tags %}<li><a href="{{ site.url }}/tags/#{{ tag }}" title="Pages tagged {{ tag }}">{{ tag }}</a></li>{% endfor %}
+        </div>
       </div><!-- /.entry-content -->
     </div><!-- /.entry-wrapper --> 
     <nav class="pagination" role="navigation">
