--- a/_layouts/blogoldal.html
+++ b/_layouts/blogoldal.html
@@ -6,6 +6,7 @@
 <head>
 {% include head.html %}
 <base target="_blank" />
+  <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/ccd07d4147b624f9514b68765/4260b9c76adcbb6ed8337c4b4.js");</script>
 </head>
 
 <body id="post">
