--- a/_layouts/egyedioldal.html
+++ b/_layouts/egyedioldal.html
@@ -32,6 +32,70 @@
           {% include disqus-comments.html %}
         {% endif %}
         {% include fb-like.html %}
+        Iratkozz fel a hírlevelemre, hogy minden új posztról értesítést kapj!
+        <!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="https://agostonlaszlo.us17.list-manage.com/subscribe/post?u=ccd07d4147b624f9514b68765&amp;id=430588ad8f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<h2>Iratkozz fel a hírlevelemre!</h2>
+<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="mc-field-group">
+	<label for="mce-EMAIL">E-mail címed  <span class="asterisk">*</span>
+</label>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+<div class="mc-field-group">
+	<label for="mce-FNAME">Keresztneved  <span class="asterisk">*</span>
+</label>
+	<input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
+</div>
+<div class="mc-field-group">
+	<label for="mce-CITY">Lakhelyed (város)  <span class="asterisk">*</span>
+</label>
+	<input type="text" value="" name="CITY" class="required" id="mce-CITY">
+</div>
+<div class="mc-field-group input-group">
+    <strong>Adatvédelem </strong>
+    <ul><li><input type="checkbox" value="1" name="group[3371][1]" id="mce-group[3371]-3371-0"><label for="mce-group[3371]-3371-0">Elfogadom az adatvédelmi nyilatkozatot</label></li>
+</ul>
+</div>
+	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ccd07d4147b624f9514b68765_430588ad8f" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='CITY';ftypes[2]='text'; /*
+ * Translated default messages for the $ validation plugin.
+ * Locale: HU
+ */
+$.extend($.validator.messages, {
+	required: "Kötelező megadni.",
+	maxlength: $.validator.format("Legfeljebb {0} karakter hosszú legyen."),
+	minlength: $.validator.format("Legalább {0} karakter hosszú legyen."),
+	rangelength: $.validator.format("Legalább {0} és legfeljebb {1} karakter hosszú legyen."),
+	email: "Érvényes e-mail címnek kell lennie.",
+	url: "Érvényes URL-nek kell lennie.",
+	date: "Dátumnak kell lennie.",
+	number: "Számnak kell lennie.",
+	digits: "Csak számjegyek lehetnek.",
+	equalTo: "Meg kell egyeznie a két értéknek.",
+	range: $.validator.format("{0} és {1} közé kell esnie."),
+	max: $.validator.format("Nem lehet nagyobb, mint {0}."),
+	min: $.validator.format("Nem lehet kisebb, mint {0}."),
+	creditcard: "Érvényes hitelkártyaszámnak kell lennie."
+});}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
+        
         <p><strong> Itt lájkolhatod az oldalamat:</strong></p>
   <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fagostonlaszloartist&tabs&width=340&height=130&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=false&appId=1705794036358179" width="340" height="130" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 
