--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,7 +60,7 @@
 <form action="https://agostonlaszlo.us17.list-manage.com/subscribe/post?u=ccd07d4147b624f9514b68765&amp;id=430588ad8f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 	<h2>Iratkozz fel a hírlevelemre!</h2>
-<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="indicates-required"><span class="asterisk">*</span> kötelező mezők</div>
 <div class="mc-field-group">
 	<label for="mce-EMAIL">E-mail címed  <span class="asterisk">*</span>
 </label>
@@ -77,8 +77,7 @@
 	<input type="text" value="" name="CITY" class="required" id="mce-CITY">
 </div>
 <div class="mc-field-group input-group">
-    <strong>Adatvédelem </strong>
-    <ul><li><input type="checkbox" value="1" name="group[3371][1]" id="mce-group[3371]-3371-0"><label for="mce-group[3371]-3371-0">Elfogadom az adatvédelmi nyilatkozatot</label></li>
+      <ul><li><input type="checkbox" value="1" name="group[3371][1]" id="mce-group[3371]-3371-0"><label for="mce-group[3371]-3371-0">Elfogadom az <a href="http://agostonlaszlo.hu/adatvedelmi" target="blank">adatvédelmi nyilatkozatot</a></label></li>
 </ul>
 </div>
 	<div id="mce-responses" class="clear">
