--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -77,7 +77,7 @@
 	<input type="text" value="" name="CITY" class="required" id="mce-CITY">
 </div>
 <div class="mc-field-group input-group">
-      <ul><li><input type="checkbox" value="1" name="group[3371][1]" id="mce-group[3371]-3371-0"><label for="mce-group[3371]-3371-0">Elfogadom az <a href="http://agostonlaszlo.hu/adatvedelmi" target="blank">adatvédelmi nyilatkozatot</a></label></li>
+      <ul><li><input type="checkbox" value="1" name="group[3371][1]" id="mce-group[3371]-3371-0"><label for="mce-group[3371]-3371-0">Elfogadom az <a href="http://agostonlaszlo.hu/blog/adatvedelmi" target="blank">adatvédelmi nyilatkozatot</a></label></li>
 </ul>
 </div>
 	<div id="mce-responses" class="clear">
