--- a/_layouts/egyedioldal.html
+++ b/_layouts/egyedioldal.html
@@ -62,7 +62,7 @@
 </div>
 <div class="mc-field-group input-group">
     <strong>Adatvédelem </strong>
-    <ul><li><input type="checkbox" value="1" name="group[3371][1]" id="mce-group[3371]-3371-0"><label for="mce-group[3371]-3371-0">Elfogadom az adatvédelmi nyilatkozatot</label></li>
+    <ul><li><input type="checkbox" value="1" name="group[3371][1]" id="mce-group[3371]-3371-0"><label for="mce-group[3371]-3371-0">Elfogadom fogadom az <a href="http://agostonlaszlo.hu/blog/adatvedelmi" target="blank">adatvédelmi nyilatkozatot</a></label></li>
 </ul>
 </div>
 	<div id="mce-responses" class="clear">
