--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,7 +48,7 @@
         {% endif %}
         <p><strong>Ne felejtsd el megosztani, ha értesz és egyetértesz!</strong></p>
         {% include fb-like.html %}
-        <p><strong> Iratkozz fel a hírlevelemre, hogy ne a Facebook döntse el, mit olvasol!</strong></p>
+        <p><strong> Iratkozz fel a hírlevelemre, hogy ne a Facebook döntse el, mi jut el hozzád!</strong></p>
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
